tests/errors/lexical_error_1.fm
PASTA_RAIZ "/home/usuario/documentos"
REGRA SE $NOME# EH "relatorio" ENTAO MOVER_PARA "/arquivados" // Caractere # não reconhecido
